# AI-Screen-Assistant

./: .gitignore  CHANGELOG.md  License.txt  README.md  package.json
.github/workflows/: release.yml
docs/: License.txt  README.txt
src/: App.css  App.tsx  main.tsx  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: App.tsx  commands.rs  lib.rs  main.rs
src/components/: Sidebar.tsx  TopBar.tsx
src/lib/: ai.ts  events.ts  ocr.ts
src/pages/: Capture.tsx  Explain.tsx  Insights.tsx  Summarize.tsx
